--- a/ProjetoBRQ/ProjetoBRQ/Views/Account/Login.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Account/Login.cshtml
@@ -4,47 +4,59 @@
     ViewBag.Title = "Efetuar login";
 }
 
-<div class="container">
-    <h2>@ViewBag.Title</h2>
-
-    <section id="loginForm">
-        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h5>Usar uma conta local para efetuar login.</h5>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="input-field">
-                        @Html.LabelFor(m => m.Email)
-                        @Html.TextBoxFor(m => m.Email, new { @class = "validate", @type = "email" })
+<h2>@ViewBag.Title.</h2>
+<div class="row">
+    <div class="col-md-8">
+        <section id="loginForm">
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <h4>Usar uma conta local para efetuar login.</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
-                    <div class="input-field">
-                        @Html.LabelFor(m => m.Password)
-                        @Html.PasswordFor(m => m.Password, new { @class = "validate" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
-                    <div class="checkbox-inline">
-                        @Html.CheckBoxFor(m => m.RememberMe)
-                        @Html.LabelFor(m => m.RememberMe)
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <div class="checkbox">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
+                        </div>
                     </div>
-                    <div class="input-field">
-                        <button type="submit" class="btn waves-effect waves-light">
-                            Efetuar login
-                            <i class="material-icons right">send</i>
-                        </button>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Efetuar login" class="btn btn-default" />
                     </div>
+                </div>
+                <p>
+                    @Html.ActionLink("Registrar-se como novo usuário", "Register")
+                </p>
+                @* Ativar isso assim que você tiver a confirmação de conta ativada para a funcionalidade de redefinição de senha
                     <p>
-                        @Html.ActionLink("Registrar-se como novo usuário", "Register")
-                    </p>
-                    @* Ativar isso assim que você tiver a confirmação de conta ativada para a funcionalidade de redefinição de senha
-                        <p>
-                            @Html.ActionLink("Esqueceu sua senha?", "ForgotPassword")
-                        </p>*@
-        }
-    </section>
+                        @Html.ActionLink("Esqueceu sua senha?", "ForgotPassword")
+                    </p>*@
+            }
+        </section>
+    </div>
+    <div class="col-md-4">
+        <section id="socialLoginForm">
+            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+        </section>
+    </div>
 </div>
-<br />
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
