--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
@@ -3,15 +3,14 @@
     ViewBag.Title = "Details";
 }
 
-<div class="container">
-    <div class="panel panel-default">
-        <h3>Informações do cliente</h3>
-        <a href="@Url.Action("Index","Contatos")">Listar contatos</a>
-        <br />
-
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Informações</h3>
+    </div>
+    <div class="panel-body">
         <div class="row">
-            <div class="col m5">
-                <table class="bordered">
+            <div class="col-md-5">
+                <table class="table table-bordered table-condensed table-hover ">
                     <tr>
                         <td>
                             <b>@Html.LabelFor(m => m.Nome)</b>
@@ -55,11 +54,10 @@
                             </td>
                         </tr>
                     }
+
                 </table>
             </div>
         </div>
-        <a href="@Url.Action("Edit","Clientes", new { Id = Model.Id })">Edit</a>
     </div>
-    <br />
+    <a href="@Url.Action("Edit","Clientes", new { Id = Model.Id })">Edit</a>
 </div>
-
