--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
@@ -3,48 +3,29 @@
     ViewBag.Title = "Index";
 }
 
-<link href="~/Content/TablesStyle.css" type="text/css" rel="stylesheet" />
+<style>
+    .paged {
+        border: 1px solid black;
+        padding: 3px;
+    }
+</style>
 
-<div class="container">
-    <h2>Notícias cadastradas</h2>
-
-    <div id="content" class="col m12">
-        <table id="table" class="bordered">
-            <tr>
-                <td>
-                    <div class="input-field">
-                        <i class="material-icons prefix">search</i>                    
-                        @Html.TextBoxFor(m => m.Id, new { @placeholder = "Pesquisar por ID" })
-                    </div>
-                </td>
-                <td>
-                    <div class="input-field">
-                        <i class="material-icons prefix">search</i>
-                        @Html.TextBoxFor(m => m.Title, new { @placeholder = "Pesquisar por Titulo" })
-                    </div>
-               </td>
-            </tr>
-            <tr id="head">
-                <td>@Html.LabelFor(m => m.Id)</td>
-                <td>@Html.LabelFor(m => m.Title)</td>
-                <td>@Html.LabelFor(m => m.Description)</td>
-                <td>Ações</td>
-            </tr>
-        </table>
-
-        <div class="preloader-wrapper big active centered" id="load">
-            <div class="spinner-layer spinner-blue-only">
-                <div class="circle-clipper left">
-                    <div class="circle"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="page">
-        <ul class="pagination" id="ulPage"></ul>
-    </div>
+<div id="content" class="col-md-12">
+    <table id="table" class="table table-bordered table-hover table-striped">
+        <tr>
+            <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
+            <td>@Html.TextBoxFor(m => m.Title, new { @class = "form-control" })</td>
+        </tr>
+        <tr id="head">
+            <td>@Html.LabelFor(m => m.Id)</td>
+            <td>@Html.LabelFor(m => m.Title)</td>
+            <td>@Html.LabelFor(m => m.Description)</td>
+            <td>Ações</td>
+        </tr>
+    </table>
+    <i id="load" class="fa fa-spinner fa-spin text-center" style="font-size:54px"></i>
 </div>
-
+<div id="page"></div>
 <script>
 
     $('#Id').keypress(function (e) {
@@ -66,7 +47,7 @@
 
     function initTable() {
         $(".dynamic").remove();
-        $(".eoq").remove();
+        $(".paged").remove();
         $.ajax({
             type: "GET",
             url: `@Url.Action("TableIndex", "News")?Page=null&Id=${$('#Id').val()}&Title=${$("#Title").val()}`,
@@ -78,12 +59,10 @@
             }
         });
     }
-    
-    $(document).on('click', '.eoq', function () {
+
+    $(document).on('click', '.paged', function () {
 
         var id = $(this).attr('id').split('-')[1];
-
-        $('li').removeClass('active');
         $(".dynamic").remove();
         $('#load').css('display', 'inline-block');
         $.ajax({
@@ -95,44 +74,39 @@
                 $('#load').css('display', 'none');
             }
         });
-        $('#paged-' + id).parent().addClass('active');
     });
 
     function createPaged(data) {
         var html = '';
 
         for (var i = 1; i <= data.countPages; i++) {
-            //html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
-            if (i == 1) {
-                html += `<li class="waves-effect active"><a class='eoq' href='#' id="paged-${i}">${i}</a></li>`;
-            } else {
-                html += `<li class="waves-effect"><a class='eoq' href='#' id="paged-${i}">${i}</a></li>`;
-            }
+            html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
         }
-        $('#ulPage').append(html);        
+        $('#page').append(html);
     }
-    
+
+
     function createTable(data) {
         var table = '';
 
         for (var i = 0; i < data.list.length; i++) {
-            table += '<tr>';
+            table += '<tr class="dynamic">';
             table += `<td> ${data.list[i].Id}</td>`;
             table += `<td> ${data.list[i].Title}</td>`;
-            table += `<td class="table-truncate"><div class="table-truncate__body">${data.list[i].Description}</div></td>`;
+            table += `<td> ${data.list[i].Description}</td>`;
             table += '<td>'
-            table += `<a href="@Url.Action("Details","News")/${data.list[i].Id}"><i class="material-icons" aria-hidden="true" style='color:black'>info</i></a>&nbsp&nbsp`;
-            table += `<a href="@Url.Action("Edit","News")/${data.list[i].Id}"><i class="material-icons" aria-hidden="true" style='color:black'>create</i></a>&nbsp&nbsp`;
-            table += `<a href="@Url.Action("Delete","News")/${data.list[i].Id}"><i class="material-icons" aria-hidden="true" style='color:black'>delete</i></a>&nbsp&nbsp`
-            table += `<a href="@Url.Action("Preview","News")/${data.list[i].Id}"><i class="material-icons" aria-hidden="true" style='color:black'>web</i></a>`
+            table += `<a href="@Url.Action("Details","News")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Edit","News")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Delete","News")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`
+            table += `<a href="@Url.Action("Preview","News")/${data.list[i].Id}"><i class="fa fa-newspaper-o" aria-hidden="true" style='color:black'></i></a>`
             table += '</td>';
             table += '</tr>'
         }
 
         $('#table').append(table);
     }
-    
+
 </script>
 
-
+<h2>Index</h2>
 
