--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
@@ -4,6 +4,11 @@
 }
 
 
+<a class="btn btn-default" href="@Url.Action("Index","Contatos")">
+    <i class="fa fa-list" aria-hidden="true"></i>
+    Listar Contatos
+</a>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
