--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
@@ -3,6 +3,11 @@
     ViewBag.Title = "Details";
 }
 
+<a class="btn btn-default" href="@Url.Action("Index","Clientes")">
+    <i class="fa fa-list" aria-hidden="true"></i>
+    Listar Clientes
+</a>
+
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3>Informações</h3>
