--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
@@ -9,7 +9,31 @@
     }
 </style>
 
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <p>Você deseja deletar a noticia?</p>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <div id="content" class="col-md-12">
+
+    @Html.ActionLink("Cadastrar Contatos","Create","Contatos", new { @class = "btn btn-default" })
+
     <table id="table" class="table table-bordered table-hover table-striped">
         <tr>
             <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
@@ -23,7 +47,7 @@
             <td>Ações</td>
         </tr>
     </table>
-    <i id="load" class="fa fa-spinner fa-spin text-center" style="font-size:54px"></i>
+    <p class="text-center"><i id="load" class="fa fa-spinner fa-spin" style="font-size:54px"></i></p>
 </div>
 <div id="page"></div>
 <script>
@@ -39,6 +63,10 @@
 
     $('#Email').keypress(function (e) {
         enterPress(e);
+    });
+
+    $(document).on('click', '.delete', function () {
+        $('.modal-body').append(`<a class='btn btn-default' href="@Url.Action("Delete","Contatos")/${$(this).attr('id').split('-')[1]}">isso ai</a>`)
     });
 
     $(document).on('click', '.paged', function () {
@@ -98,7 +126,7 @@
             table += '<td>';
             table += `<a href="@Url.Action("Details","Contatos")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
             table += `<a href="@Url.Action("Edit", "Contatos")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-            table += `<a href="@Url.Action("Delete", "Contatos")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href='#' class='delete' id='delete-${data.list[i].Id}' data-toggle='modal' data-target='#myModal'><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`
             table += '</td>';
             table += '</tr>';
         }
