--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Edit.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Edit.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Create";
 }
 
+<a class="btn btn-default" href="@Url.Action("Index","News")">
+    <i class="fa fa-list" aria-hidden="true"></i>
+    Listar Noticias
+</a>
+
 @using (Html.BeginForm("Edit", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="form-group">
